update library version